--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,10 @@
 			<version>2.3.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901-1.jdbc4</version>
+		</dependency>
     </dependencies>
 </project>
