--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.dataformat</groupId>
+    		<artifactId>jackson-dataformat-csv</artifactId>
+    		<version>2.3.3</version>
+		</dependency>
     </dependencies>
 </project>
