--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,11 @@
     		<artifactId>jackson-dataformat-csv</artifactId>
     		<version>2.3.3</version>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.0.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
