Add Google login

--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
             <version>5.0.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.23.0</version>
+        </dependency>
     </dependencies>
 </project>
