--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
             <version>5.0.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>com.sun.jersey.contribs</groupId>
+        	<artifactId>jersey-multipart</artifactId>
+        	<version>1.19.4</version>
+        </dependency>
     </dependencies>
 </project>
