--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,8 @@
         <dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
-			<version>2.22.2</version>
+			<version>2.27</version>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.jaxrs</groupId>
-			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>2.3.3</version>
-		</dependency>
-
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -54,7 +48,7 @@
 		<dependency>
     		<groupId>com.fasterxml.jackson.dataformat</groupId>
     		<artifactId>jackson-dataformat-csv</artifactId>
-    		<version>2.3.3</version>
+    		<version>2.9.5</version>
 		</dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -63,14 +57,25 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>com.sun.jersey.contribs</groupId>
-        	<artifactId>jersey-multipart</artifactId>
-        	<version>1.19.4</version>
-		</dependency>
-        <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
             <version>1.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>2.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.27</version>
+        </dependency>
+
     </dependencies>
 </project>
